adding css and readMe to the project.

--- a/output/team.html
+++ b/output/team.html
@@ -25,27 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">cal</h2>
+        <h2 class="card-title">Manny</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 11</li>
-            <li class="list-group-item">Email: <a href="mailto:cal@calcom.com">cal@calcom.com</a></li>
-            <li class="list-group-item">Office number: 222</li>
+            <li class="list-group-item">ID: M4nn13</li>
+            <li class="list-group-item">Email: <a href="mailto:Manny@calcom.com">Manny@calcom.com</a></li>
+            <li class="list-group-item">Office number: 123-456-7890</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">edgy</h2>
+        <h2 class="card-title">Edgy</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 16</li>
-            <li class="list-group-item">Email: <a href="mailto:edgy@calcom.com">edgy@calcom.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/edgy" target="_blank" rel="noopener noreferrer">edgy</a></li>
+            <li class="list-group-item">ID: 36gy</li>
+            <li class="list-group-item">Email: <a href="mailto:Edgy@calcom.com">Edgy@calcom.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/github.com/Edgerton" target="_blank" rel="noopener noreferrer">github.com/Edgerton</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Indie</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 1n63</li>
+            <li class="list-group-item">Email: <a href="mailto:Indie@calcom.com">Indie@calcom.com</a></li>
+            <li class="list-group-item">School: Cal Community College</li>
         </ul>
     </div>
 </div>
